--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heyy Anushka!!!</title>
+  <title>Heyy   Reema!!!</title>
   <style>
     body {
       display: flex;
@@ -72,7 +72,7 @@
     });
 
     yesButton.addEventListener('click', () => {
-      alert('Yeahh! You made me the happiest person! 💖');
+      alert('Are you free for your next 40-50 years>>? 💖');
     });
   </script>
 </body>
